-- Generated by Mocodo 4.3.2

CREATE TABLE CATEGORIE (
  PRIMARY KEY (nom),
  nom         VARCHAR(42) NOT NULL,
  description VARCHAR(42),
  couleur     VARCHAR(42)
);

CREATE TABLE CONTENIR (
  PRIMARY KEY (titre, nom),
  titre    VARCHAR(42) NOT NULL,
  nom      VARCHAR(42) NOT NULL,
  quantite VARCHAR(42),
  unite    VARCHAR(42)
);

CREATE TABLE GENRE (
  PRIMARY KEY (identifiant_TMDB_genre),
  identifiant_TMDB_genre VARCHAR(42) NOT NULL,
  nom                    VARCHAR(42)
);

CREATE TABLE INGREDIENT (
  PRIMARY KEY (nom),
  nom      VARCHAR(42) NOT NULL,
  approuve VARCHAR(42)
);

CREATE TABLE MEDIA (
  PRIMARY KEY (identifiant_TMDB),
  identifiant_TMDB VARCHAR(42) NOT NULL,
  titre_1          VARCHAR(42),
  type             VARCHAR(42),
  slug             VARCHAR(42),
  affiche          VARCHAR(42),
  synopsis         VARCHAR(42),
  annee            VARCHAR(42),
  realisateur      VARCHAR(42),
  titre_2          VARCHAR(42) NOT NULL
);

CREATE TABLE NOTIFICATION (
  PRIMARY KEY (type),
  type    VARCHAR(42) NOT NULL,
  message VARCHAR(42),
  lu      VARCHAR(42),
  email   VARCHAR(42) NOT NULL
);

CREATE TABLE POSSEDER (
  PRIMARY KEY (identifiant_TMDB, identifiant_TMDB_genre),
  identifiant_TMDB       VARCHAR(42) NOT NULL,
  identifiant_TMDB_genre VARCHAR(42) NOT NULL
);

CREATE TABLE RECETTE (
  PRIMARY KEY (titre),
  titre             VARCHAR(42) NOT NULL,
  slug              VARCHAR(42),
  statut            VARCHAR(42),
  motif_refus       VARCHAR(42),
  nombre_personnes  VARCHAR(42),
  temps_preparation VARCHAR(42),
  temps_cuisson     VARCHAR(42),
  photo             VARCHAR(42),
  email             VARCHAR(42) NOT NULL,
  nom               VARCHAR(42) NOT NULL
);

CREATE TABLE UTILISATEUR (
  PRIMARY KEY (email),
  email              VARCHAR(42) NOT NULL,
  pseudo             VARCHAR(42),
  nom                VARCHAR(42),
  role               VARCHAR(42),
  derniere_connexion VARCHAR(42)
);

ALTER TABLE CONTENIR ADD FOREIGN KEY (nom) REFERENCES INGREDIENT (nom);
ALTER TABLE CONTENIR ADD FOREIGN KEY (titre) REFERENCES RECETTE (titre);

ALTER TABLE MEDIA ADD FOREIGN KEY (titre_2) REFERENCES RECETTE (titre);

ALTER TABLE NOTIFICATION ADD FOREIGN KEY (email) REFERENCES UTILISATEUR (email);

ALTER TABLE POSSEDER ADD FOREIGN KEY (identifiant_TMDB_genre) REFERENCES GENRE (identifiant_TMDB_genre);
ALTER TABLE POSSEDER ADD FOREIGN KEY (identifiant_TMDB) REFERENCES MEDIA (identifiant_TMDB);

ALTER TABLE RECETTE ADD FOREIGN KEY (nom) REFERENCES CATEGORIE (nom);
ALTER TABLE RECETTE ADD FOREIGN KEY (email) REFERENCES UTILISATEUR (email);
